gramnuri/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gramnuri-api
  labels:
    app: gramnuri-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gramnuri-api
  template:
    metadata:
      labels:
        app: gramnuri-api
    spec:
      containers:
      - name: gramnuri-api
        image: asia-northeast3-docker.pkg.dev/gramnuri-dev/gramnuri-repo/gramnuri-api:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 128Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        kubernetes.io/os: linux
