gramnuri/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gramnuri-api
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: gramnuri-api
  type: LoadBalancer
